# adversarial-spec

./: .active_context.md  .gitignore  .handoff.md  2026-05-30-vmodel-pipeline-shortcomings.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  MODEL_REFERENCE.md  README.md  adversarial-spec-debug-mode-proposal.md  adversarial-spec-process-failure-report-global-killall-incident.md  adversarial-spec-process-failure-report-mock-classification.md  adversarial-spec-process-failure-report-pipeline-seams-20260530.md  adversarial-spec-process-failure-report.md  adversarial-spec-process-failure-report2.md  adversary-request-existing-system-compatibility.md  execution-plan.json  extended commentary on adversaries.docx  middleware-creator-proposal.md  onboarding-adversarial_spec-alignment.md  process-failure-12-strategy-enum-drift-ADDENDUM-20260530.md  pyproject.toml  roadmap-alignment-design.md  spec-ensemble-patterns.md  spec-output-docmaster.md  spec-output.md
skills/adversarial-spec/: SETUP.md  SKILL-full.md.archive  SKILL.md  gauntlet-improvement-proposal.md  pyproject.toml
skills/adversarial-spec/.adversarial-spec-gauntlet/: concerns-7d553fe9.json  evaluations-7d553fe9.json
skills/adversarial-spec/agents/: openai.yaml
skills/adversarial-spec/phases/: 00-triage.md  01-init-and-requirements.md  02-roadmap.md  03-debate.md  04-gauntlet.md  04-target-architecture.md  05-finalize.md  05-gauntlet.md  06-execution.md  06-finalize.md  07-execution.md  08-implementation.md  09-verification.md  middleware-creator.md
skills/adversarial-spec/reference/: altitude.md  (+11 more)
(+613 files in other folders)
